--- a/06_DOM/index.html
+++ b/06_DOM/index.html
@@ -11,10 +11,10 @@
         <p id="paraText" class="paraClass"> This is paragraph</p>
     </div>
 
-    <script>
+    <!-- <script>
         const myHeading=document.getElementById("headingText");
         
-    </script>
+    </script> -->
     
 </body>
 </html>
